Revert to Java 8