@@ -121,8 +121,8 @@ subprojects {
     apply plugin: 'idea'
 
 
-    sourceCompatibility = 1.10
-    targetCompatibility = 1.10
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     repositories {
         mavenLocal()
@@ -144,69 +144,6 @@ subprojects {
                 forcedModules = [
                 ]
             }
-        }
-    }
-
-
-
-
-
-    afterEvaluate {
-        repositories {
-            jcenter()
-        }
-
-        compileJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-//                        '--add-modules', 'junit',
-//                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        test {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-//                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        javadoc {
-            options.addStringOption('-module-path', classpath.asPath)
-            options.addStringOption('Xdoclint:all,-missing', '-html5')
-        }
-
-        jar {
-            inputs.property("moduleName", moduleName)
-            manifest {
-                attributes(
-                        "Automatic-Module-Name": moduleName,
-                        "Implementation-Title": "Event-Logging",
-                        "Implementation-Version": versions.eventLoggingAndSchema,
-                )
-            }
-            version versions.eventLoggingAndSchema
         }
     }
 
